# StcMarvelTask

./: README.md  local.properties
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/org/stc/marvel/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lip.cpp  nativelip.cpp
app/src/main/java/org/stc/marvel/: MainActivity.kt
app/src/main/java/org/stc/marvel/components/: CharacterItem.kt  ComicImageScreen.kt  EmptyView.kt  HorizontalImageGallery.kt  NetworkErrorView.kt
app/src/main/java/org/stc/marvel/constants/: Constants.kt
app/src/main/java/org/stc/marvel/core/: MarvelApp.kt
app/src/main/java/org/stc/marvel/custom/: CustomTextDrawer.kt
app/src/main/java/org/stc/marvel/data/model/: CharachtersResponse.kt  NetworkResult.kt  PreviewModel.kt
app/src/main/java/org/stc/marvel/data/repo/: MarvelRepository.kt
app/src/main/java/org/stc/marvel/di/: NetworkModule.kt  RepoModule.kt
app/src/main/java/org/stc/marvel/domain/api/: ApiService.kt
app/src/main/java/org/stc/marvel/domain/repo/: GetMarvelsUseCaseImpl.kt
app/src/main/java/org/stc/marvel/domain/utils/: AuthInterceptor.kt
app/src/main/java/org/stc/marvel/provider/: DataProivider.kt  DataProvider.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/test/java/org/stc/marvel/: DetailsViewModelTest.kt  ExampleUnitTest.kt  HomeViewModelTest.kt  MainCoroutineRule.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
